2020-06-05  Karl Berry  <karl@freefriends.org>

	* tex4ht-javahelp-xtpipes.tex: \input{tex4ht-dir}.

2020-06-05  Vincent Bela\"iche  <vincent.belaiche@gmail.com>

	* tex4ht-javahelp-xtpipes.tex,
	* tex4ht-html-speech-xtpipes.tex: Remove reference to \XTPIPES lib

2020-06-05  Karl Berry  <karl@freefriends.org>

	* Makefile (do_java): conditional to enable Java derivations
	and compilations.
	* Makefile.exp: move "experimental section" to here from Makefile.

2020-06-05  Vincent Bela\"iche  <vincent.belaiche@gmail.com>

	* tex4ht-docbook-xtpipes.tex,
	* tex4ht-javahelp-xtpipes.tex,
	* tex4ht-jsml-xtpipes.tex,
	* tex4ht-oo-xtpipes.tex,
	* tex4ht-xhtml-xtpipes.tex,
	* tex4ht-xhtmml-xtpipes.tex: Replace absolute paths by macros
	from tex4ht-dir.tex.

	* tex4ht-html-speech-xtpipes.tex: Likewise replace absolute paths,
	and ensure directory \TEXMFTEXivBIN exists.

	* xtpipes.tex: Likewise replace absolute paths, and
	change system calls so that javac input files are streamed from find.

2020-06-04 Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-modern.tex: removed lot of duplicated .htf entries.
	* tex4ht-fonts-modern.tex (txbtt8v, txbttsc8v, txbttsl8v, txtt8v, txttsc8v,
	txttsl8v): new HTF files.
	* tex4ht-fonts-noncjk.tex: renamed pxbsyc.htf to txbsyc.htf.

2020-06-04  Karl Berry  <karl@freefriends.org>

	* tex4ht-fonts-modern.tex (lm-qxtt-LM-05): remove duplicate \AddFont.
	(lm-qxtt-LM-05): move to after definition.
	* tex4ht-fonts-noncjk.tex (txtt): \AddFont this instead of txb twice.
	(zppleb7m): remove duplicate definition.
	(pcrb): remove \AddFont in phvb section (correct the name, too).
	(txbsyc): delete second spurious (alias) entry.
	(ma1r8c, ma1r8t, ma1b8t): remove definitions since they were never
	installed because their directory,
        tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/monotype,
        was not created (and the fonts are not free anyway).

	* Makefile (SearchFonts.java, etc.): disable dependencies so as